--- a/LoanManagementSystem/Views/Shared/_Layout.cshtml
+++ b/LoanManagementSystem/Views/Shared/_Layout.cshtml
@@ -23,6 +23,13 @@
 </head>
 <body class="skin-green sidebar-mini">
     <div class="wrapper">
+        @{
+            LoanManagementSystem.Models.sdtoUser UserDetails = HttpContext.Current.Session["UserDetails"] as LoanManagementSystem.Models.sdtoUser;
+            if (UserDetails == null)
+            {
+                UserDetails = new LoanManagementSystem.Models.sdtoUser();
+            }
+        }
 
         <!-- Main Header -->
         <header class="main-header">
@@ -190,16 +197,19 @@
             <!-- sidebar: style can be found in sidebar.less -->
             <section class="sidebar">
                 <!-- Sidebar user panel (optional) -->
-                <div class="user-panel">
-                    @* <div class="pull-left image">
-                             <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                         </div>
+                @{if (User.Identity.IsAuthenticated)
+                {
+                    <div class="user-panel">
+                        <div class="pull-left image">
+                            <img src="~/Utility/ProfileImage?UserId=@UserDetails.UserID" class="img-circle" alt="User Image" />
+                        </div>
                         <div class="pull-left info">
-                             <p>Alexander Pierce</p>
-                             <!-- Status -->
-                             <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                         </div>*@
-                </div>
+                            <p>@UserDetails.FirstName @UserDetails.LastName</p>
+                            <!-- Status -->
+                            @*<a href="#"><i class=f"fa fa-circle text-success"></i> Online</a>*@
+                        </div>
+                    </div>
+                }}
                 <!-- search form (Optional) -->
                 @*<form action="#" method="get" class="sidebar-form">
                         <div class="input-group">
