--- a/LoanManagementSystem/Views/Loan/Index.cshtml
+++ b/LoanManagementSystem/Views/Loan/Index.cshtml
@@ -54,6 +54,8 @@
                 @Html.ActionLink("Edit", "Edit", new { id = item.LoanId }) |
                 @Html.ActionLink("Details", "Index", "LoanRepayments", new { LoanId = item.LoanId }, new { id = item.LoanId }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.LoanId })
+                @Html.ActionLink("Cancel", "LoanCancellation", new { id = item.LoanId })
+                @Html.ActionLink("Recall", "LoanRecall", new { id = item.LoanId })
             </td>
         </tr>
     }
