--- a/LoanManagementSystem/Views/_ViewStart.cshtml
+++ b/LoanManagementSystem/Views/_ViewStart.cshtml
@@ -2,9 +2,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@{
-    //if (!User.Identity.IsAuthenticated)
-    //{
-    //    RedirectResult("Login", "User");
-    //}
-}
+@*@{
+    if (!User.Identity.IsAuthenticated)
+    {
+        return System.Web.Mvc.RedirectResult("Login", "User");
+    }
+}*@
