--- a/LoanManagementSystem/Views/Loan/LoanCancellation.cshtml
+++ b/LoanManagementSystem/Views/Loan/LoanCancellation.cshtml
@@ -11,45 +11,43 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-   
+
 </head>
 <body>
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal"> 
+
+        <div class="form-horizontal">
             <hr />
             @Html.ValidationSummary(true)
             @Html.HiddenFor(model => model.LoanId)
-            @Html.HiddenFor(model => model.Status) 
+            @Html.HiddenFor(model => model.Status)
             @Html.HiddenFor(model => model.UserId)
 
-            
-    
-               <div class="form-group">
-                    @Html.LabelFor(model => model.LoanId, "Loan No", new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @*@Html.EditorFor(model => model.LoanId,new { disabled = "disabled", @readonly = "readonly" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.LoanId, "Loan No", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @*@Html.EditorFor(model => model.LoanId,new { disabled = "disabled", @readonly = "readonly" })
                         @Html.ValidationMessageFor(model => model.LoanId)*@
-                        @Html.TextBoxFor(model => model.LoanId, new { disabled = "disabled", @readonly = "readonly" })
-                    </div>
+                    @Html.TextBoxFor(model => model.LoanId, new { disabled = "disabled", @readonly = "readonly" })
                 </div>
-      
+            </div>
+
             <div class="form-group">
                 @Html.LabelFor(model => model.LoanAmount, "Loan Amount", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.LoanAmount, new { disabled = "disabled", @readonly = "readonly" }) 
+                    @Html.TextBoxFor(model => model.LoanAmount, new { disabled = "disabled", @readonly = "readonly" })
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.InteresRate, "Interest Rate", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextBoxFor(model => model.InteresRate, new { disabled = "disabled", @readonly = "readonly" }) 
+                    @Html.TextBoxFor(model => model.InteresRate, new { disabled = "disabled", @readonly = "readonly" })
                 </div>
             </div>
-            
+
             <div class="form-group">
                 <label class="control-label col-md-2" for="PaidAmount">Paid Amount</label>
                 <div class="col-md-10">
@@ -65,23 +63,21 @@
             </div>
 
             @*<div class="form-group">
-                @Html.LabelFor(model => model.TotalInstallments, new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.TotalInstallments, new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.TotalInstallments)
+                        @Html.ValidationMessageFor(model => model.TotalInstallments)
+                    </div>
+                </div>*@
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.TotalInstallments)
-                    @Html.ValidationMessageFor(model => model.TotalInstallments)
+                    @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
                 </div>
-            </div>*@
-    
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.Status, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Status)
-                    @Html.ValidationMessageFor(model => model.Status)
-                </div>
-            </div>*@
-    
-            
-    
+            </div>
+
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Cancel this Loan" class="btn btn-default" />
@@ -89,7 +85,7 @@
             </div>
         </div>
     }
-    
+
     <div>
         @Html.ActionLink("Back to List", "Index")
     </div>
