--- a/LoanManagementSystem/Views/Loan/LoanRecall.cshtml
+++ b/LoanManagementSystem/Views/Loan/LoanRecall.cshtml
@@ -25,8 +25,6 @@
             @Html.HiddenFor(model => model.Status)
             @Html.HiddenFor(model => model.UserId)
 
-
-
             <div class="form-group">
                 @Html.LabelFor(model => model.LoanId, "Loan No", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -54,7 +52,7 @@
                 @Html.Label("Paid Amount")
                 <div class="col-md-10">
                    @* @Html.TextBoxFor(@ViewData["PaidAmount"])*@
-                   
+
 
             <div class="form-group">
                 <label class="control-label col-md-2" for="PaidAmount">Paid Amount</label>
@@ -67,6 +65,14 @@
                 <label class="control-label col-md-2" for="PaidAmount">Balance Amount</label>
                 <div class="col-md-10">
                     <input data-val="true" data-val-number="The field Balance Amount must be a number." v disabled="disabled" id="BalanceAmount" name="BalanceAmount" readonly="readonly" type="text" value=@ViewData["BalaceAmount"]>
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
                 </div>
             </div>
 
