--- a/LoanManagementSystem/Views/Deposit/Index.cshtml
+++ b/LoanManagementSystem/Views/Deposit/Index.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<Data.Models.Accounts.sdtoDepositInfo>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "List of Deposit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using GridMvc.Html
-
-<h2>Index</h2>
-
+     
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
