--- a/LoanManagementSystem/Views/Deposit/Index.cshtml
+++ b/LoanManagementSystem/Views/Deposit/Index.cshtml
@@ -170,7 +170,7 @@
 {
     <b>
         @Html.ActionLink("Edit", "Edit", new { id = deposit.DepositId }) | @Html.ActionLink("Details", "Index", "LoanRepayments", new { DepositId = deposit.DepositId }, new { id = deposit.DepositId }) | @Html.ActionLink("Delete", "Delete", new { id = deposit.DepositId })
-        | @Html.ActionLink("Cancel", "LoanCancellation", new { id = deposit.DepositId }) | @Html.ActionLink("Recall", "LoanRecall", new { id = deposit.DepositId })
+        | @*@Html.ActionLink("Cancel", "LoanCancellation", new { id = deposit.DepositId }) | @Html.ActionLink("Recall", "LoanRecall", new { id = deposit.DepositId })*@
     </b>
 }
 
